--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
-        <img src="/images/swiss-valley.jpg" alt="valley" width="1440" height="560">
+        <img src="images/swiss-valley.jpg" alt="valley" width="1440" height="560">
         </header>
 
         <main>
